--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py26,py27
+envlist = py27
 [testenv]
+setenv=
+	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
-commands=py.test
-
+commands=py.test -x -s -m current
