--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py27
+envlist = py26,py27
 [testenv]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
-commands=py.test -x -s -m current
+commands=py.test -x -s 
