--- a/tox.ini
+++ b/tox.ini
@@ -5,3 +5,8 @@ setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
 commands=py.test -x -s 
+[testenv:current]
+setenv=
+	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
+deps=pytest
+commands=py.test -x -s -m current
