changed server mock for testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py26,py27
+envlist = py26
 [testenv]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
-commands=py.test -x -s 
+commands=py.test -x -s -v -m current
 [testenv:current]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
-commands=py.test -x -s -m current
+commands=py.test -x -s -v -m current
