changed device emulation for tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py26
+envlist = py26,py27
 [testenv]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
-commands=py.test -x -s -v -m current
-[testenv:current]
+commands=py.test {posargs}
+[testenv:dev]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=pytest
-commands=py.test -x -s -v -m current
+commands=py.test -x -s -v {posargs}
