--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "2.7"
- install: 
-  - pip install .
-  - pip install pytest
+install: 
+  - "pip install ."
+  - "pip install pytest"
 script: pytest
