added email notification for

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ install:
   - "pip install . "
   - "pip install pytest"
 script: "py.test"
+notifications:
+  email:
+    - francesco_salamida@alliedtelesis.com
+    - michele_mensuali@alliedtelesis.com
