fixed support for python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,14 @@ envlist = py26,py27
 [testenv]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
-deps=pytest
+deps=
+    pytest
+    twisted
 commands=py.test {posargs}
 [testenv:dev]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
-deps=pytest
+deps=
+    pytest
+    twisted
 commands=py.test -x -s -v {posargs}
