added support for coverage and coveralls

--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,23 @@ setenv=
 deps=
     pytest
     twisted
-commands=py.test {posargs}
+    coverage
+commands=
+    coverage erase
+    coverage run --source pynetworking {envbindir}/py.test {posargs}
+    coverage report
+    coverage html -d coverage-{envname}
+
 [testenv:dev]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=
     pytest
     twisted
-commands=py.test -x -s -v {posargs}
+    coverage
+commands=
+    coverage erase
+    coverage run --source pynetworking {envbindir}/py.test -x -s -v {posargs}
+    coverage report
+    coverage html -d coverage-{envname}
+
