--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ python:
   - "2.6"
   - "2.7"
 install: 
-  - "pip install . "
-  - "pip install twisted"
-  - "pip install pytest"
-script: "py.test"
+  - pip install -e . --use-mirrors
+  - pip install twisted
+  - pip install coveralls
+  - pip install coverage
+  - pip install pytest
+script: 
+  - coverage run --source pynetworking py.test 
+after_success:
+  - coveralls
+
