--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
 install: 
   - pip install -e . --use-mirrors
@@ -9,7 +8,7 @@ install:
   - pip install coverage
   - pip install pytest
 script: 
-  - coverage run --source pynetworking py.test 
+  - coverage run --source pynetworking setup.py tests
 after_success:
   - coveralls
 
