--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install coverage
   - pip install pytest
 script: 
-  - coverage run --source pynetworking ./setup.py tests
+  - coverage run --source pynetworking ./setup.py test
 after_success:
   - coveralls
 
