--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 install: 
   - pip install -e . --use-mirrors
+  - pip install tox
   - pip install twisted
   - pip install coveralls
   - pip install coverage
