--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: python
 python:
   - "2.7"
 install: 
-  - pip install -e . --use-mirrors
-  - pip install tox
+  - pip install .
   - pip install twisted
   - pip install coveralls
   - pip install coverage
   - pip install pytest
+  - pip install pytest-cov
 script: 
-  - coverage run --source pynetworking ./setup.py test
+  - py.test --cov=src tests/
 after_success:
   - coveralls
 
