--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install pytest
   - pip install pytest-cov
 script: 
-  - py.test --cov=src tests/
+  - py.test --cov pynetworking tests/
 after_success:
   - coveralls
 
