--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install pytest
   - pip install pytest-cov
 script: 
-  - py.test -x -v --log=info --cov pynetworking tests/
+  - py.test -x -v --log=debug --cov pynetworking tests/
 after_success:
   - coveralls -v
 
