--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.6"
   - "2.7"
 install: 
-  - pip install .
+  - pip install -e .
   - pip install twisted
   - pip install coveralls
   - pip install coverage
