project directories refactoring

--- a/tox.ini
+++ b/tox.ini
@@ -5,24 +5,22 @@ setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=
     pytest
+    pytest-cov
     twisted
     coverage
 commands=
-    coverage erase
-    coverage run --source pynetworking {envbindir}/py.test {posargs}
-    coverage report
-    coverage html -d coverage-{envname}
+    py.test {posargs}
+
 
 [testenv:dev]
 setenv=
 	ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
 deps=
     pytest
+    pytest-cov
     twisted
     coverage
 commands=
-    coverage erase
-    coverage run --source pynetworking {envbindir}/py.test -x -s -v {posargs}
-    coverage report
-    coverage html -d coverage-{envname}
+    py.test -x -v -s --cov-report html --cov-config .coveragerc --cov-report term --cov {envsitepackagesdir}/pynetworking {posargs}
+
 
