--- a/pynetworking/Device.yaml
+++ b/pynetworking/Device.yaml
@@ -12,13 +12,13 @@ features:
   file: awp_file
   license: awp_license
   mac: awp_mac
-  clock: awp_clock
+  ntp: awp_ntp
 {% elif os == 'ats' %}
   interface: ats_interface
   vlan: ats_vlan
   user: ats_user
   file: ats_file
   mac: ats_mac
-  clock: ats_clock
+  ntp: ats_ntp
 {% endif %}
 
