--- a/pynetworking/Device.yaml
+++ b/pynetworking/Device.yaml
@@ -14,6 +14,7 @@ features:
   mac: awp_mac
   clock: awp_clock
   ntp: awp_ntp
+  dns: awp_dns
 {% elif os == 'ats' %}
   interface: ats_interface
   vlan: ats_vlan
@@ -22,5 +23,6 @@ features:
   mac: ats_mac
   clock: ats_clock
   ntp: ats_ntp
+  dns: ats_dns
 {% endif %}
 
