--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ deps=
     pytest-cov
     twisted
     coverage
+    mock
 commands=
     py.test -x -v -s --cov-report html --cov-config .coveragerc --cov-report term --cov {envsitepackagesdir}/pynetworking {posargs}
 
